log/build_2026-05-06_22-16-41/planning/stdout_stderr.log
running egg_info
writing ../../build/planning/planning.egg-info/PKG-INFO
writing dependency_links to ../../build/planning/planning.egg-info/dependency_links.txt
writing entry points to ../../build/planning/planning.egg-info/entry_points.txt
writing requirements to ../../build/planning/planning.egg-info/requires.txt
writing top-level names to ../../build/planning/planning.egg-info/top_level.txt
reading manifest file '../../build/planning/planning.egg-info/SOURCES.txt'
writing manifest file '../../build/planning/planning.egg-info/SOURCES.txt'
running build
running build_py
copying planning/launch/duplo.launch.py -> /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/build/planning/build/lib/planning/launch
running install
running install_lib
copying /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/build/planning/build/lib/planning/launch/duplo.launch.py -> /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/planning/launch
byte-compiling /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/planning/launch/duplo.launch.py to duplo.launch.cpython-310.pyc
  File "/home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/planning/launch/duplo.launch.py", line 37
    ExecuteProcess( cmd=[ 'ros2', 'launch', 'realsense2_camera', 'rs_launch.py', 'pointcloud.enable:=true', 'rgb_camera.color_profile:=1920x1080x30' ])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/planning-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/planning/planning.egg-info to /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/planning-0.0.0-py3.10.egg-info
running install_scripts
Installing ik script to /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/planning
Installing main script to /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/planning
Installing planning_node script to /home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/planning
writing list of installed files to '/home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/build/planning/install.log'
